# prompt-engine

./: .gitignore  README.md  examples.py  pyproject.toml  requirements.txt
prompt_engine/: engine.py  exceptions.py  loader.py  models.py  renderer.py
templates/: cot_reasoning.yaml  cot_word_problem.yaml  few_shot_grammar.yaml  few_shot_math.yaml  role_python_expert.yaml  role_teacher.yaml  structured_qa.yaml  structured_summary.yaml  zero_shot_basic.yaml  zero_shot_explain.yaml
